--- a/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
+++ b/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
@@ -11,7 +11,7 @@ old_composes_per_release_type = True
 comps_file = {
     'scm': 'git',
     'repo': 'https://pagure.io/fedora-comps.git',
-    'branch': 'master', # defaults to cvs/HEAD or git/master
+    'branch': 'main', # defaults to cvs/HEAD or git/main
     'file': 'comps-[[ release.branch ]].xml',
     'command': 'make',
 }
