bodhi / pungi: disallow pkg reuse in updates pungi runs
This should prevent a recent issue where a unsigned package managed to
get synced out. The package was mistagged, was fixed, but then it's
cached signed copies had been garbage collected. This caused the push to
fail, but then the resumed one didn't regather the signed version of
that package, and instead just reused the unsigned one.
Setting this should prevent pungi from doing any package reuse here,
which is fine as updates don't reuse packages.
See https://pagure.io/pungi/issue/1480 for more information.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
+++ b/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
@@ -58,6 +58,7 @@ runroot_tag = 'f[[ release.version_int ]]-build'
 pkgset_source = 'koji' # koji, repos
 pkgset_koji_tag = '[[ id ]]'
 pkgset_koji_inherit = False
+pkgset_allow_reuse = False
 filter_system_release_packages = False
 
 # GATHER
