pagure: fix the path to the ssl cert in the stunnel config
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/pagure/templates/stunnel-conf.j2
+++ b/roles/pagure/templates/stunnel-conf.j2
@@ -2,8 +2,8 @@
 cert = /etc/pki/tls/certs/stg.pagure.io.bundle.cert
 key = /etc/pki/tls/private/stg.pagure.io.key
 {% else %}
-cert = /etc/pki/tls/certs/pagure.io.bundle.cert
-key = /etc/pki/tls/certs/pagure.io.key
+cert = /etc/pki/tls/certs/pagure.io.cert
+key = /etc/pki/tls/private/pagure.io.key
 {% endif %}
 pid = /var/run/stunnel.pid
 
