--- a/roles/koji_hub/templates/prune-signed-copies-protected-tags.j2
+++ b/roles/koji_hub/templates/prune-signed-copies-protected-tags.j2
@@ -12,6 +12,8 @@ f{{ FedoraPreviousCycleNumber }}-infra-stg
 f{{ FedoraPreviousPreviousCycleNumber }}-infra
 f{{ FedoraPreviousPreviousCycleNumber }}-infra-stg
 {% endif %}
+epel8-infra
+epel8-infra-stg
 epel7-infra
 epel7-infra-stg
 coreos-pool
