--- a/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
+++ b/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
@@ -128,7 +128,7 @@ multilib_whitelist = {
         'mariadb-connector-odbc', 'compiler-rt',
         'nvidia-query-resource-opengl-lib',
         'ibus-libs', 'ibus-gtk2', 'ibus-gtk3',
-        'glib-networking', 'dssi-vst-wine', 'mangohud'
+        'glib-networking', 'dssi-vst-wine', 'mangohud', 'glx-utils'
     ],
 }
 createiso_skip = [
