--- a/roles/openshift-apps/monitor-dashboard/templates/dashboard_fedora_coreos_updates.json.j2
+++ b/roles/openshift-apps/monitor-dashboard/templates/dashboard_fedora_coreos_updates.json.j2
@@ -390,7 +390,7 @@
                         "expr": "sum by (os_version) ((zincati_cincinnati_booted_release_is_deadend) + on (instance) group_left(os_version) (0*zincati_identity_os_info))",
                         "format": "time_series",
                         "intervalFactor": 2,
-                        "legendFormat": "{{os_version}}",
+                        "legendFormat": {{ '"{{os_version}}"' }},
                         "refId": "A"
                      }
                   ],
