Another typo in dashboard definition for fedora_coreos

--- a/roles/openshift-apps/monitor-dashboard/templates/dashboard_fedora_coreos_updates.json.j2
+++ b/roles/openshift-apps/monitor-dashboard/templates/dashboard_fedora_coreos_updates.json.j2
@@ -56,7 +56,7 @@
                         "expr": "sum by(os_version) (zincati_identity_os_info)",
                         "format": "time_series",
                         "intervalFactor": 2,
-                        "legendFormat": "{{os_version}}",
+                        "legendFormat":{{ '"{{os_version}}"' }},
                         "refId": "A"
                      }
                   ],
