--- a/roles/koji_hub/templates/kojira.conf.j2
+++ b/roles/koji_hub/templates/kojira.conf.j2
@@ -36,7 +36,8 @@ repo_tasks_limit=40
 serverca = /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
 
 ;how soon (in seconds) to clean up expired repositories. 1 week default
-deleted_repo_lifetime = 86400
+;keep repos for 3 days
+deleted_repo_lifetime = 259200
 
 ;how soon (in seconds) to clean up dist repositories.
 ;we want this super long so we don't delete latest repos
