chrony: try and fix chrony in staging
In staging we set a 'staging' datacenter, but this makes the chrony
template think they are external hosts not in iad2, which is wrong.
So, add a conditional to make them use our internal iad2 ntp servers if
they are in staging datacenter too.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/chrony/templates/chrony.conf.j2
+++ b/roles/chrony/templates/chrony.conf.j2
@@ -1,5 +1,5 @@
 # setup our servers
-{% if datacenter == 'iad2' and not ansible_hostname.startswith('bastion') %}
+{% if ( datacenter == 'iad2' or datacenter == 'staging' ) and not ansible_hostname.startswith('bastion') %}
 server bastion01.iad2.fedoraproject.org iburst
 server bastion02.iad2.fedoraproject.org iburst
 {% elif datacenter == 'cloud'  and not ansible_hostname.startswith('cloud-noc') %}
