Branching f34 from rawhide
Signed-off-by: Tomas Hrcka <thrcka@redhat.com>

--- a/roles/bodhi2/backend/templates/pungi.module.conf.j2
+++ b/roles/bodhi2/backend/templates/pungi.module.conf.j2
@@ -22,6 +22,8 @@ sigkeys = [
 	'9570ff31',
 [% elif release.version_int == 34 %]
     '45719a39',
+[% elif release.version_int == 35 %]
+    '9867c58f',
 [% elif release.version_int == 8 %]
         '2f86d6a1',
 [% endif %]
