--- a/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
+++ b/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
@@ -35,6 +35,8 @@ sigkeys = [
     '9570ff31',
 [% elif release.version_int == 34 %]
     '45719a39',
+[% elif release.version_int == 35 %]
+    '9867c58f',
 [% elif release.version_int == 6 %]
     '0608b895',
 [% elif release.version_int == 7 %]
