--- a/roles/koji_hub/templates/hub.conf.j2
+++ b/roles/koji_hub/templates/hub.conf.j2
@@ -184,6 +184,7 @@ package_list =
     all :: deny
 
 sidetag =
+    tag f35-build :: allow
     tag f34-build :: allow
     tag f33-build :: allow
     tag f32-build :: allow
