bodhi / backend: add debuginfo packages to rpm pungi updates config
Right now, pungi for updates doesn't include debuginfo for all packages.
It skips ones that don't match any binary package. So we add a wildcard
to include all these as well.
See https://pagure.io/pungi/issue/1460 for more info.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
+++ b/roles/bodhi2/backend/templates/pungi.rpm.conf.j2
@@ -95,6 +95,7 @@ additional_packages = [
     ('^Everything$', {
         '*': [
             '*',
+            '*-debuginfo',
         ],
     }),
 ]
