--- a/roles/robosignatory/templates/robosignatory.toml.j2
+++ b/roles/robosignatory/templates/robosignatory.toml.j2
@@ -197,23 +197,23 @@ handlers = ["console"]
             type = "modular"
 
 
-#            [[consumer_config.koji_instances.primary.tags]]
-#            from = "f34-signing-pending"
-#            to = "f34-updates-testing-pending"
-#            key = "{{ (env == 'production')|ternary('fedora-34', 'testkey') }}"
-#            keyid = "{{ (env == 'production')|ternary('45719a39', 'd300e724') }}"
+            [[consumer_config.koji_instances.primary.tags]]
+            from = "f34-signing-pending"
+            to = "f34-updates-testing-pending"
+            key = "{{ (env == 'production')|ternary('fedora-34', 'testkey') }}"
+            keyid = "{{ (env == 'production')|ternary('45719a39', 'd300e724') }}"
 
-#            [consumer_config.koji_instances.primary.tags.sidetags]
-#            pattern = 'f34-build-side-<seq_id>'
-#            from = '<sidetag>-signing-pending'
-#            to = '<sidetag>-testing-pending'
-#            trusted_taggers = ['bodhi']
+            [consumer_config.koji_instances.primary.tags.sidetags]
+            pattern = 'f34-build-side-<seq_id>'
+            from = '<sidetag>-signing-pending'
+            to = '<sidetag>-testing-pending'
+            trusted_taggers = ['bodhi']
 
-#            [[consumer_config.koji_instances.primary.tags]]
-#            from = "f34-pending"
-#            to = "f34"
-#            key = "{{ (env == 'production')|ternary('fedora-34', 'testkey') }}"
-#            keyid = "{{ (env == 'production')|ternary('45719a39', 'd300e724') }}"
+            [[consumer_config.koji_instances.primary.tags]]
+            from = "f34-pending"
+            to = "f34"
+            key = "{{ (env == 'production')|ternary('fedora-34', 'testkey') }}"
+            keyid = "{{ (env == 'production')|ternary('45719a39', 'd300e724') }}"
 
             [[consumer_config.koji_instances.primary.tags]]
             from = "f34-modular-pending"
