--- a/roles/ansible-ansible-openshift-ansible/templates/cluster-inventory-iad2-prod.j2
+++ b/roles/ansible-ansible-openshift-ansible/templates/cluster-inventory-iad2-prod.j2
@@ -536,7 +536,7 @@ openshift_master_identity_providers=[{"name": "fedoraidp", "login": "true", "cha
 {% if env == "staging" %}
 openshift_hosted_registry_storage_kind=nfs
 openshift_hosted_registry_storage_access_modes=['ReadWriteMany']
-openshift_hosted_registry_storage_host=ntap-phx2-c01-fedora01-nfs.storage.phx2.redhat.com
+openshift_hosted_registry_storage_host=ntap-iad2-c02-fedora01-nfs01a.iad2.fedoraproject.org
 openshift_hosted_registry_storage_nfs_directory=/
 openshift_hosted_registry_storage_volume_name=openshift-stg-registry
 openshift_hosted_registry_storage_volume_size=10Gi
