Avoid mail being sent from fas server while in read only mode

--- a/roles/fas_server/templates/export-bugzilla.cfg.j2
+++ b/roles/fas_server/templates/export-bugzilla.cfg.j2
@@ -7,7 +7,7 @@ bugzilla.username = "fedora-admin-xmlrpc@fedoraproject.org"
 bugzilla.password = "{{ bugzillaPassword }}"
 
 # Mail server for sending invalid bugzilla account messages
-mail.server = 'bastion'
+mail.server = 'bastion-dummy'
 mail.admin_email = 'admin@fedoraproject.org'
 
 # This is a list (*must* have a comma) of email addresses to send messages about
