--- a/roles/fas_server/templates/fas.cfg.j2
+++ b/roles/fas_server/templates/fas.cfg.j2
@@ -213,7 +213,7 @@ memcached_server = "fas01:11211,fas02:11211"
 
 # Sending of email via TurboMail
 mail.on = True
-mail.smtp.server = 'bastion'
+mail.smtp.server = 'bastion-dummy'
 #mail.testmode = True
 mail.smtp.debug = False
 mail.encoding = 'utf-8'
