Prepare Noggin & FASJSON for prod
Signed-off-by: Aurélien Bompard <aurelien@bompard.org>

--- a/roles/ipsilon/files/templates/login/form.html
+++ b/roles/ipsilon/files/templates/login/form.html
@@ -24,7 +24,7 @@
                             <input class="form-control" id="password" name="login_password" type="password" placeholder="Password" />
                         </div>
                         <div class="col-xs-12 text-xs-right">
-                            <small class="text-muted"><a target="_blank" href="https://admin.fedoraproject.org/accounts/user/resetpass">Forgot password?</a></small>
+                            <small class="text-muted"><a target="_blank" href="https://accounts.fedoraproject.org/forgot-password/ask">Forgot password?</a></small>
                         </div>
                     </div>
                     <div class="form-group row m-b-0">
@@ -42,6 +42,6 @@
 
 {% block after_card %}
 
-<div class="text-xs-center"><small class="text-muted">Don't have a FAS account? <a target="_blank" href="https://admin.fedoraproject.org/accounts/user/new">Sign up now</a>.</small></div>
+<div class="text-xs-center"><small class="text-muted">Don't have a FAS account? <a target="_blank" href="https://accounts.fedoraproject.org/">Sign up now</a>.</small></div>
 
 {% endblock %}
