--- a/roles/fas_server/templates/fas.cfg.j2
+++ b/roles/fas_server/templates/fas.cfg.j2
@@ -212,7 +212,7 @@ sqlalchemy.max_overflow=2
 memcached_server = "fas01:11211,fas02:11211"
 
 # Sending of email via TurboMail
-mail.on = True
+mail.on = False
 mail.smtp.server = 'bastion-dummy'
 #mail.testmode = True
 mail.smtp.debug = False
