--- a/roles/ipsilon/templates/httpd.conf.j2
+++ b/roles/ipsilon/templates/httpd.conf.j2
@@ -55,7 +55,7 @@ WSGIApplicationGroup %{GLOBAL}
 
 <Location /login/gssapi/negotiate>
     AuthName "GSSAPI Single Sign On Login"
-    GssapiCredStore keytab:/etc/httpd/conf/http.keytab
+    GssapiCredStore keytab:/etc/krb5.HTTP_id{{ env_suffix }}.fedoraproject.org.keytab
     AuthType GSSAPI
     # This is off because Apache (and thus mod_auth_gssapi) doesn't know this is proxied over TLS
     GssapiSSLonly Off
