downloads: add odcs/eln rsync target
https://pagure.io/fedora-infrastructure/issue/9730
Some folks want to rsync eln composes, add this module to download
servers so they can do this if they want. If this adds too much load
we can look at some kind of alternate mirroring.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/rsyncd/templates/rsyncd.conf.download.j2
+++ b/roles/rsyncd/templates/rsyncd.conf.download.j2
@@ -93,6 +93,13 @@ refuse options = checksum
 	{% if inventory_hostname in groups['download_tier1'] %}
        hosts allow = {% for host in vars['dl_tier1'] %}{{host}},{% endfor %}
         {% endif %}
+
+[ fedora-eln ]
+	comment = Fedora ELN composes
+	path = /srv/odcs
+	{% if inventory_hostname in groups['download_tier1'] %}
+       hosts allow = {% for host in vars['dl_tier1'] %}{{host}},{% endfor %}
+        {% endif %}
 ##
 ## The following are not seen and are limited by IP.
 ##
