openQA: update server config (disable audit, tweak cleanup)
We never use the auditing stuff, so let's turn it off (and set
short limits for audit event duration so we can run the cleanup
and get rid of existing audit events). Let's also use the new
setting that only runs asset cleanup if free space is low.

Signed-off-by: Adam Williamson <awilliam@redhat.com>

--- a/roles/openqa/server/templates/openqa.ini.j2
+++ b/roles/openqa/server/templates/openqa.ini.j2
@@ -1,4 +1,5 @@
 [global]
+audit_enabled = 0
 branding = plain
 base_url = https://{{ external_hostname }}
 download_domains = fedoraproject.org
@@ -13,11 +14,25 @@ topic_prefix = {{ openqa_amqp_publisher_prefix }}
 url = {{ openqa_amqp_publisher_url }}
 exchange = {{ openqa_amqp_publisher_exchange }}
 
+[audit/storage_duration]
+startup = 7
+jobgroup = 7
+jobtemplate = 7
+table = 7
+iso = 7
+user = 7
+asset = 7
+needle = 7
+other = 7
+
 [auth]
 method=OpenID
 
 [logging]
 level=info
+
+[misc_limits]
+asset_cleanup_max_free_percentage = 20
 
 [openid]
 provider = https://id.fedoraproject.org/
